# snx-simulator

./: .gitignore  README.md  main.py  pyproject.toml  sample.s  spec.md
.github/workflows/: publish.yml  test.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-pytest-baseline-negative.txt  task-1-pytest-baseline.txt  task-1-workflow-assertion.txt
.sisyphus/notepads/add-dw-support/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: add-dw-support.md
docs/: assembly-language.md  python-api.md  static-analysis.md
snx/: __init__.py  analyzer.py  ast.py  cfg.py  checker.py  cli.py  compiler.py  constants.py  dataflow.py  diagnostics.py  encoding.py  parser.py  runner.py  sample_runner.py  simulator.py  tokenizer.py  trace.py  word.py
tests/: test_cli_dw.py  test_dw_analyzer.py  test_dw_api.py  test_dw_parser.py  test_dw_simulator.py  test_smoke_existing.py
