[project]
name = "sn-x-simulator"
version = "0.2.1"
description = "sn/x architecture assembly code simulator"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
snx = "snx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snx"]
